// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DualListSelector basic 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector__pane pf-m-available"
  >
    <div
      class="pf-v6-c-dual-list-selector__menu"
      tabindex="0"
    >
      <ul
        class="pf-v6-c-dual-list-selector__list"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector basic with disabled controls 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector__pane pf-m-available"
  >
    <div
      class="pf-v6-c-dual-list-selector__menu"
      tabindex="0"
    >
      <ul
        class="pf-v6-c-dual-list-selector__list"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector with custom status 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector__pane pf-m-available"
  >
    <div
      class="pf-v6-c-dual-list-selector__status"
    >
      <div
        class="pf-v6-c-dual-list-selector__status-text"
        id="statusTest-status"
      >
        Test status1
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__menu"
      tabindex="0"
    >
      <ul
        class="pf-v6-c-dual-list-selector__list"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListSelector with search inputs 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-dual-list-selector__pane pf-m-available"
  >
    <div
      class="pf-v6-c-dual-list-selector__tools"
    >
      <div
        class="pf-v6-c-dual-list-selector__tools-filter"
      >
        <div
          class="pf-v6-c-text-input-group"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="m18.8 17.21-4.41-4.41A7.906 7.906 0 0 0 16 8c0-4.41-3.59-8-8-8S0 3.59 0 8s3.59 8 8 8c1.73 0 3.42-.57 4.8-1.61l4.41 4.41c.44.44 1.15.44 1.59 0 .44-.44.44-1.15 0-1.59ZM8 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6Z"
                  />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v6-c-text-input-group__text-input"
                type="text"
                value=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-dual-list-selector__menu"
      tabindex="0"
    >
      <ul
        class="pf-v6-c-dual-list-selector__list"
      />
    </div>
  </div>
</DocumentFragment>
`;
